# django-with-poetry-template

./: README.md  pyproject.toml
project/apps/: admin.py
project/apps/migrations/: 0001_initial.py  0002_animal_pet.py
project/apps/models/: __init__.py  animals.py  models.py
project/project/: settings.py
tests/: test_django_with_poetry_template.py
