[tool.poetry]
name = "django-with-poetry-template"
version = "0.1.0"
description = ""
authors = ["lee sang hun <oper6909@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
Django = "^3.2.6"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
